# opengl-by-glfw

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.cache/clangd/index/: box.cpp.8D966D237672EA2C.idx  box.hpp.DA2DE3D6C99B6175.idx  main.cpp.A4DC29B18AEE8DA1.idx  program.cpp.049B9B1E72F4C95F.idx  program.hpp.3E8C3CDCDD24D42F.idx
.github/workflows/: cmake.yml
src/: Object.h  Shape.h  box.cpp  box.hpp  main.cpp  main.hpp  point.frag  point.vert  program.cpp  program.hpp
